<resources>
    <string name="app_name">OrderSystem</string>
    <string name="username">使用者</string>
    <string name="password">密碼</string>
    <string name="login">登入</string>
    <string name="keyempty">輸入空白</string>
    <string name="loginsuccess">登入成功</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="productname">品名</string>
    <string name="price">價格</string>
    <string name="worktime">製作時間</string>
    <string name="create">新建</string>
    <string name="order">訂單</string>
    <string name="product">商品列表</string>
    <string name="query">歷史查詢</string>
    <string name="inputIsEmpty">未輸入或輸入空白</string>
    <string name="title_productlist">商品清單</string>
    <string name="productisEmpty">沒有商品</string>
    <string name="priceSymbol">$</string>
    <string name="minute"> 分鐘</string>
    <string name="title_chooseproduct">點餐</string>
    <string name="priceInitial">$0</string>
    <string name="countInitial">1</string>
    <string name="sure">確認</string>
    <string name="send">送出</string>
    <string name="orderid">單號:</string>
    <string name="orderisEmpty">沒有訂單</string>
    <string name="customerOrderList">訂單查詢</string>
    <string name="createTitle">商品編輯</string>
    <string name="productFinish">出餐完成</string>
    <string name="productPreReady">準備中</string>
    <string name="cancel">取消</string>
    <string name="productEnd">結單</string>
    <string name="title_orderlist">訂單</string>
</resources>