<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".customer.SingleMarketProductFragment">


    <TextView
        android:id="@+id/tvName_SingleMarketProduct"
        style="@style/myText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text=""
        tools:text="Name"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.01"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etCount_SingleProduct"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:text="@string/countInitial"
        android:gravity="center"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintVertical_bias="0.2"
        android:layout_margin="2dp"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvName_SingleMarketProduct"
        />


    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintBottom_toBottomOf="@+id/etCount_SingleProduct"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etCount_SingleProduct"
        app:cardCornerRadius="50dp"
        app:cardElevation="6dp"
        >

        <ImageButton
            android:id="@+id/ibSub_SingleProduct"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:src="@drawable/baseline_remove_black_36" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintBottom_toBottomOf="@+id/etCount_SingleProduct"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etCount_SingleProduct"
        app:cardCornerRadius="50dp"
        app:cardElevation="6dp"
        >

        <ImageButton
            android:id="@+id/ibAdd_SingleProduct"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:src="@drawable/baseline_add_black_36" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvPrice_SingleProduct"
        style="@style/myText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/design_default_color_error"
        android:text=""
        tools:text="price"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCount_SingleProduct" />

    <TextView
        android:id="@+id/tvWaitTime_SingleProduct"
        style="@style/myText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        tools:text="waitTime"
        android:textColor="#595151"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCount_SingleProduct" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="50dp"
        app:cardElevation="6dp"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintVertical_bias="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <ImageButton
            android:id="@+id/ibMarket_SingleProduct"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:background="@color/white"
            android:src="@drawable/baseline_local_grocery_store_black_36" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvTotal_SingleProduct"
        style="@style/myText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/priceInitial"
        app:layout_constraintHorizontal_bias="0.35"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cardView"
        />

    <Button
        android:id="@+id/btSure_SingleProduct"
        style="@style/myButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/sure"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cardView" />


</androidx.constraintlayout.widget.ConstraintLayout>